@@ -14,11 +14,11 @@ import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.BDDMockito.given;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
@@ -36,8 +36,11 @@ class GuestAccommodationServiceTest {
     public void 모든_숙소_조회_테스트() {
         // given
         Pageable pageable = PageRequest.of(0, 10);
-        Accommodation accommodation = new Accommodation("Test Accommodation", "Seoul", "Description", "100.0", null);
-        Page<Accommodation> accommodationPage = new PageImpl<>(List.of(accommodation));
+        Accommodation accommodation1 = new Accommodation("Test Accommodation", "Seoul", "Description", "100.0", null);
+        Accommodation accommodation2 = new Accommodation("Test Accommodation", "Seoul", "Description", "100.0", null);
+
+        List<Accommodation> accommodationList = Arrays.asList(accommodation1, accommodation2);
+        Page<Accommodation> accommodationPage = new PageImpl<>(accommodationList, pageable, accommodationList.size());
 
         // accommodationRepository.findAll() 호출 시 accommodationPage를 리턴하도록 설정
         given(accommodationRepository.findAll(pageable)).willReturn(accommodationPage);
@@ -47,8 +50,7 @@ class GuestAccommodationServiceTest {
 
         // then
         // 조회 결과가 기대한 Accommodation 이름을 포함하는지 검증
-        assertEquals(1, result.getTotalElements());
-        assertEquals("Test Accommodation", result.getContent().get(0).getName());
+        assertEquals(2, result.getTotalElements());
         verify(accommodationRepository, times(1)).findAll(pageable); // findAll() 호출 횟수 검증
     }
 
@@ -67,6 +69,7 @@ class GuestAccommodationServiceTest {
 
         // then
         // 조회된 Accommodation의 이름이 예상대로 "Test Accommodation"인지 검증
+        assertNotNull(result);
         assertEquals("Test Accommodation", result.getName());
         verify(accommodationRepository, times(1)).findById(accommodationId); // findById() 호출 횟수 검증
     }
